--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <nav class="navbar navbar-expand-lg navbar-white bg-white border-bottom border-top">
     <div class="container">
       <a class="navbar-brand fs-2 fw-bold" href="#">
-        <i class="fa fa-cart-shopping fs-2" style="color: #f54242;"></i>
+        <i class="fa fa-shopping-cart fs-2" style="color: #f54242;"></i>
         <span class="textBlur">Shophere</span>
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -24,7 +24,7 @@
             </ul>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle fw-semibold text-uppercase me-1 text-danger" href="#" role="button"
+            <a class="nav-link dropdown-toggle fw-semibold text-uppercase me-1 text-black" href="#" role="button"
               data-bs-toggle="dropdown" aria-expanded="false">
               PAGES
             </a>
@@ -35,7 +35,7 @@
             </ul>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle fw-semibold text-uppercase me-1 text-danger" href="#" role="button"
+            <a class="nav-link dropdown-toggle fw-semibold text-uppercase me-1 text-black" href="#" role="button"
               data-bs-toggle="dropdown" aria-expanded="false">
               PRODUCT
             </a>
@@ -46,7 +46,7 @@
             </ul>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle fw-semibold text-uppercase me-1 text-danger" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle fw-semibold text-uppercase me-1 text-black" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               BLOG
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -56,7 +56,7 @@
             </ul>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle fw-semibold text-uppercase me-1 text-danger" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle fw-semibold text-uppercase me-1 text-black" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               SHOP
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
