GET Products from the API

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,6 @@
   <nav class="navbar navbar-expand-lg navbar-white bg-white border-bottom border-top">
     <div class="container">
       <a class="navbar-brand fs-2 fw-bold" href="#">
-        <i class="fa fa-shopping-cart fs-2" style="color: #f54242;"></i>
         <span class="textBlur">Shophere</span>
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -90,8 +89,6 @@
 
 <section id="product">
   <div class="container">
-    <router-outlet>
-
-    </router-outlet>
+    <router-outlet></router-outlet>
   </div>
 </section>
