--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,50 @@
-<p>home works!</p>
+<section id="product">
+    <div class="container">
+        <div class="row">
+            <div class="col-12 mt-3">
+                <div class="productHeading text-center">
+                    <h2 class="mb-3">Exclusive Products</h2>
+                    <ul class="list-unstyled d-flex justify-content-center">
+                        <li><a href="#" class="m-4 text-decoration-none text-danger fw-semibold">New Arrival</a></li>
+                        <li><a href="#" class="m-4 text-decoration-none text-black fw-semibold">Best Sellers</a></li>
+                        <li><a href="#" class="m-4 text-decoration-none text-black fw-semibold">Featured</a></li>
+                        <li><a href="#" class="m-4 text-decoration-none text-black fw-semibold">Special Offer</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-12">
+                <div class="row mt-3">
+                    <div class="col-lg-3 pt-3" *ngFor="let product of productList">
+                        <div class="box-shadow">
+                            <div class="card">
+                                <img class="img-fluid" [src]="product.productImageUrl" alt="" class="card-img-top">
+                                <div class="card-body">
+                                    <h5 class="card-title">{{ product.productName }}</h5>
+                                    <p class="card-text"><span class="text-danger fw-semibold me-2">${{
+                                            product.productPrice }}</span><del>${{ product.productPrice -
+                                            (product.productPrice * .35) }}</del>
+                                        <span class="text-success ms-2">35% off</span>
+                                    </p>
+                                    <div class="row">
+                                        <div class="col-6">
+                                            <span><i class="fa fa-star m-0" style="color: #f1f50f;"></i></span>
+                                            <span><i class="fa fa-star m-0" style="color: #f1f50f;"></i></span>
+                                            <span><i class="fa fa-star m-0" style="color: #f1f50f;"></i></span>
+                                            <span><i class="fa fa-star m-0" style="color: #f1f50f;"></i></span>
+                                            <span><i class="fa fa-star-half-o m-0" style="color: #f1f50f;"></i></span>
+                                            <span class="text-muted">(21)</span>
+                                        </div>
+
+                                        <div class="col-6 text-end">
+                                            <button class="btn btn-sm btn-success text-end">Add To Cart </button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
