--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -45,7 +45,8 @@
             </ul>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle fw-semibold text-uppercase me-1 text-black" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle fw-semibold text-uppercase me-1 text-black" href="#" role="button"
+              data-bs-toggle="dropdown" aria-expanded="false">
               BLOG
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -55,7 +56,8 @@
             </ul>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle fw-semibold text-uppercase me-1 text-black" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle fw-semibold text-uppercase me-1 text-black" href="#" role="button"
+              data-bs-toggle="dropdown" aria-expanded="false">
               SHOP
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -67,19 +69,65 @@
           <li class="nav-item">
             <a class="nav-link fw-semibold text-uppercase text-black me-1" href="#">CONTACT US</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <i class="fa fa-search fs-5" style="color: #0c0d0d;"></i>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle cart fw-semibold text-uppercase text-black me-1" href="#">
               <i class="fa fa-cart-plus fs-5" style="color: #202122;"></i>
               <span class="position-absolute translate-middle badge rounded-pill bg-danger">
-                2
+                {{cartProducts.length}}
                 <span class="visually-hidden">unread messages</span>
               </span>
             </a>
+            <div class="dropdown-menu">
+              <div class="CartContainer">
+                <div class="row">
+                  <div class="col-6">
+                    Your Cart
+                  </div>
+                  <div class="col-6 text-end text-danger">
+                    Remove All
+                  </div>
+                </div>
+                <div class="row pt-1" *ngFor="let cart of cartProducts">
+                  <div class="col-4">
+                    <img class="img-fluid" [src]="cart.productImageUrl" alt="" class="card-img-top">
+                  </div>
+                  <div class="col-3">
+                    {{cart.productName}}
+                  </div>
+                  <div class="col-2">
+                    {{cart.quantity + 1}}
+                  </div>
+                  <div class="col-2 text-end">
+                    {{cart.productPrice}}
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-3">
+                  </div>
+                  <div class="col-9">
+                    <hr>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-2">
+                  </div>
+                  <div class="col-2">
+                  </div>
+                  <div class="col-4">
+                    <div class="Subtotal">Sub-Total</div>
+                    <div><small>2 items</small></div>
+                  </div>
+                  <div class="col-4 text-end">
+                    <strong>{{subTotal}}</strong>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-12 text-end">
+                    <button class="btn btn-sm btn-success">Checkout</button>
+                  </div>
+                </div>
+              </div>
+            </div>
           </li>
         </ul>
       </div>
