--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -36,7 +36,7 @@
                                         </div>
 
                                         <div class="col-6 text-end">
-                                            <button class="btn btn-sm btn-success text-end">Add To Cart </button>
+                                            <button class="btn btn-sm btn-success text-end" (click)="addItemToCart(product.productId)">Add To Cart </button>
                                         </div>
                                     </div>
                                 </div>
