--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -123,7 +123,7 @@
                 </div>
                 <div class="row">
                   <div class="col-12 text-end">
-                    <button class="btn btn-sm btn-success">Checkout</button>
+                    <button class="btn btn-sm btn-success" (click)="redirectToSale()">Checkout</button>
                   </div>
                 </div>
               </div>
@@ -136,7 +136,7 @@
 </header>
 
 <section id="product">
-  <div class="container">
+  <div class="container mb-4">
     <router-outlet></router-outlet>
   </div>
 </section>
