--- a/src/app/pages/sale/sale.component.html
+++ b/src/app/pages/sale/sale.component.html
@@ -1,1 +1,48 @@
-<p>sale works!</p>
+<div class="row">
+    <div class="col-8">
+        <div class="CartContainer">
+            <div class="row">
+                <div class="col-12">
+                    <h3>Cart Items</h3>
+                </div>
+            </div>
+            <div class="row pt-1" *ngFor="let cart of cartProducts">
+                <div class="col-3">
+                    <img class="img-fluid" [src]="cart.productImageUrl" alt="" class="card-img-top">
+                </div>
+                <div class="col-3">
+                    {{cart.productName}}
+                </div>
+                <div class="col-2">
+                    {{cart.quantity + 1}}
+                </div>
+                <div class="col-2 text-end">
+                    {{cart.productPrice}}
+                </div>
+                <div class="col-2 text-end">
+                    <button class="btn btn-sm btn-danger" (click)="removeItemFromCart(cart.productId)">Remove</button>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-3">
+                </div>
+                <div class="col-9">
+                    <hr>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-2">
+                </div>
+                <div class="col-2">
+                </div>
+                <div class="col-4">
+                    <div class="Subtotal">Sub-Total</div>
+                    <div><small>2 items</small></div>
+                </div>
+                <div class="col-4 text-end">
+                    <strong>{{subTotal}}</strong>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
